--- a/Pomodoro.html
+++ b/Pomodoro.html
@@ -8,6 +8,8 @@
     <title>Pomodoro Timer</title>
 </head>
 <body>
+    <a href="https://github.com/FelipeRTT"><div class="github"></div></a>
+    <a href="https://twitter.com/felipertt1"><div class="twitter"></div></a>
     <audio src="apenas_o_primeiro_som_de_alarme_que_eu_fiz_na_minha_vida_4505097302802810967.mp3"></audio>
     <div class="container">
         <h1 class="titulo">Pomodoro timer</h1>
